--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"build": "webpack"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.4.7",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.3",
     "del": "^4.0.0",
     "gulp": "^4.0.0",
